# Linux-MCP

./: .gitignore  GitHub 信息.txt  PyPI.txt  README.md
build-related/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
build-related/linux_mcp_toolkit/: __init__.py  main.py
build-related/source-code/linux_mcp_toolkit/: __init__.py  main.py
source-code/: pyproject.toml
source-code/linux_mcp_toolkit/: __init__.py  main.py
